--- a/browser/screens/splash/index.css
+++ b/browser/screens/splash/index.css
@@ -1,10 +1,11 @@
-@import url('../../common/reset.css');
+@import url('../../common/global.css');
 
 body {
-  color: #6c7075;
+  color: #424448;
 }
 
 .splash-page {
+  -webkit-user-select: none;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -15,9 +16,20 @@ body {
 }
 
 .splash-page .toolbar {
-  background-color: #fff;
+  --vert-pad: 20px;
+  -webkit-app-region: drag;
+  background-color: #2980b9;
+  color: #fff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
-  min-height: 110px;
+  padding: var(--vert-pad) 15px;
+}
+
+body.platform-darwin .splash-page .toolbar {
+  padding-top: calc(var(--vert-pad) + var(--darwin-top-bar-height));
+}
+
+.splash-page .toolbar button {
+  -webkit-app-region: no-drag;
 }
 
 .splash-page .repos {
@@ -36,7 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 15px 20px;
-  transition: background-color .2s;
+  transition: background-color var(--anim-speed);
   width: 100%;
 }
 
