--- a/browser/common/global.css
+++ b/browser/common/global.css
@@ -70,7 +70,9 @@ button {
 }
 
 .octicon {
+	fill: currentColor;
+	height: 1em;
+	width: 1em;
   display: inline-block;
-  vertical-align: text-top;
-  fill: currentColor;
+  vertical-align: middle;
 }
