--- a/browser/common/global.css
+++ b/browser/common/global.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5 {
   font-weight: 400;
 }
 
-li, span, p, a, h1, h2, h3, h4, h5 {
+li, span, p, a, button, h1, h2, h3, h4, h5 {
   line-height: 1;
 }
 
