adding postcss nesting

--- a/browser/screens/splash/index.css
+++ b/browser/screens/splash/index.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
 }
 
-.splash-page .toolbar {
+.toolbar {
   --vert-pad: 15px;
   -webkit-app-region: drag;
   background-color: #2980b9;
@@ -23,84 +23,84 @@ body {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
   padding: var(--vert-pad) 20px;
   position: relative;
+
+  & .ghost-bg {
+    background: url('../../../icons/128x128.png') center center no-repeat;
+    height: 100%;
+    left: 0;
+    opacity: .05;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 0;
+  }
+
+  & .content {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+  }
+
+  & button {
+    -webkit-app-region: no-drag;
+    font-size: 25px;
+    transition: opacity var(--anim-speed);
+
+    &:hover {
+      opacity: .8;
+    }
+  }
 }
 
-body.platform-darwin .splash-page .toolbar {
+body.platform-darwin .toolbar {
   /* to account for hidden titleBar in macOS */
   padding-top: calc(var(--vert-pad) + var(--darwin-top-bar-height));
 }
 
-.splash-page .toolbar .ghost-bg {
-  background: url('../../../icons/128x128.png') center center no-repeat;
-  height: 100%;
-  left: 0;
-  opacity: .05;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 0;
-}
-
-.splash-page .toolbar .content {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  z-index: 1;
-}
-
-.splash-page .toolbar button {
-  -webkit-app-region: no-drag;
-  font-size: 25px;
-  transition: opacity var(--anim-speed);
-}
-
-.splash-page .toolbar button:hover {
-  opacity: .8;
-}
-
-.splash-page .repos {
+.repos {
   overflow: auto;
-}
 
-.splash-page .repos .repo {
-  display: block;
-}
+  & .repo {
+    display: block;
 
-.splash-page .repos .repo:not(:last-child) {
-  border-bottom: 1px solid #dcdee0;
-}
+    &:not(:last-child) {
+      border-bottom: 1px solid #dcdee0;
+    }
 
-.splash-page .repos .repo .clickbox {
-  display: flex;
-  flex-direction: column;
-  padding: 15px 20px;
-  transition: background-color var(--anim-speed);
-  width: 100%;
-}
+    & .clickbox {
+      display: flex;
+      flex-direction: column;
+      padding: 15px 20px;
+      transition: background-color var(--anim-speed);
+      width: 100%;
 
-.splash-page .repos .repo .clickbox:hover,
-.splash-page .repos .repo .clickbox:active {
-  background-color: rgba(0, 0, 0, 0.03);
-}
+      &:hover,
+      &:active {
+        background-color: rgba(0, 0, 0, 0.03);
+      }
+    }
 
-.splash-page .repos .repo .repo-name {
-  font-size: 15px;
-  font-weight: 600;
-}
+    & .repo-name {
+      font-size: 15px;
+      font-weight: 600;
+    }
 
-.splash-page .repos .repo .repo-branch {
-  align-items: center;
-  display: flex;
-  color: #b7babe;
-  font-size: 14px;
-  margin-top: 8px;
-}
+    & .repo-branch {
+      align-items: center;
+      display: flex;
+      color: #b7babe;
+      font-size: 14px;
+      margin-top: 8px;
 
-.splash-page .repos .repo .repo-branch .octicon {
-  font-size: 16px;
-}
+      & .octicon {
+        font-size: 16px;
+      }
 
-.splash-page .repos .repo .repo-branch .branch-label {
-  font-weight: 300;
-  margin-left: 8px;
+      & .branch-label {
+        font-weight: 300;
+        margin-left: 8px;
+      }
+    }
+  }
 }
