--- a/browser/common/global.css
+++ b/browser/common/global.css
@@ -12,10 +12,10 @@
   font-size: inherit;
   margin: 0;
   padding: 0;
-}
 
-*:focus {
-  outline: none;
+  &:focus {
+    outline: none;
+  }
 }
 
 html, body {
@@ -50,10 +50,9 @@ p {
 a {
   text-decoration: none;
 
-}
-
-a:hover {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 img {
